# TerraSim

./: .babelrc  .coderabbit.yaml  .editorconfig  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .session  APPLICATION_FLOW.md  AUTHENTICATION_STATUS.py  CALCULATION_QUICKSTART.md  CODEBASE_SCAN_REPORT.txt  DATABASE_SETUP_SUMMARY.md  Dockerfile  ERROR_FIXES_LOG.txt  FEATURES.md  FINAL_STATUS_REPORT.txt  GIS_README.md  IMPLEMENTATION_SUMMARY.txt  LICENSE  MULTIPROCESS_GUIDE.md  Makefile  OPENGL_QUICKSTART.py  QUICKSTART.md  README.md  SETUP.md  SIMULATION_FIX_SUMMARY.md  SIMULATION_GUIDE.md  STARTUP_ERRORS_FIXED.md  START_HERE.md  USER_README.md  WORLD_MACHINE_VISUALIZATION.md  app.py  build-config.py  build-simple.bat  build.bat  build.sh  build_exe.bat  (+38 more)
.github/workflows/: build.yml  code-quality.yml  tests.yml
backend/: .env  alembic.ini  api.py  main.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/api/: __init__.py  deps.py  documentation.py  middleware.py  modules_api.py
backend/api/v1/: api.py
backend/core/: __init__.py  config.py  exceptions.py  logging_config.py  oauth_service.py  resource_manager.py  security.py  validation.py
backend/db/: init_db.py  session.py
backend/models/: __init__.py  analysis.py  analysis_metrics.py  base.py  device.py  erosion_result.py  job.py  pointcloud.py  project.py  raster.py  user.py
backend/modules/: __init__.py  manager.py
backend/modules/analysis/: __init__.py
backend/modules/export/: __init__.py
backend/modules/terrain/: __init__.py
backend/modules/visualization/: __init__.py
backend/schemas/: __init__.py  analysis.py  analysis_metrics.py  erosion_result.py  job.py  model.py  pointcloud.py  project.py  raster.py  user.py
backend/services/: __init__.py  analysis_service.py  attribute_table.py  data_service.py  device_manager.py  email_service.py  enhanced_auth_service.py  erosion_model.py  export_tools.py  geotiff_handler.py  gis_engine.py  health_check.py  job_service.py  layer_composition.py  map_data_extractor.py  measurement_tools.py  model_service.py  moderngl_terrain.py  opengl_renderer.py  opengl_tkinter.py  pipeline.py  plugin_manager.py  pointcloud_service.py  project_service.py  raster_service.py  simulation_engine.py  spatial_processor.py  statistical_analysis.py  terrain_simulator.py  user_service.py  usped_workflow.py  worker_pool.py  world_machine_style.py
backend/services/analysis/: __init__.py
backend/services/geospatial/: __init__.py  crs_manager.py  dem_processor.py  geoprocessing_api.py  gis_api_service.py  gis_service_integration.py  pointcloud_service.py  professional_data_io.py  professional_erosion_visualization.py  professional_layer_manager.py  raster_service.py  spatial_query.py  vector_operations.py
backend/services/jobs/: __init__.py
backend/services/visualization/: __init__.py  gpu_renderer.py  layer_manager.py  style_manager.py
backend/utils/: __init__.py  decorators.py  helpers.py  validators.py
desktop/: main.py
electron/: main.js
frontend/: auth_window.py  auth_window_oauth.py  device_management.py  gis_canvas.py  index.html  main_gis.py  main_window.py  professional_ui.py  professional_ui_standalone.py  world_machine_3d.py
frontend-web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend-web/src/: App.tsx  index.css  index.utilities.css
frontend-web/src/components/: CesiumViewer.css  CesiumViewer.tsx
frontend-web/src/hooks/: useTerraSim.ts
frontend-web/src/modules/: index.ts
frontend-web/src/pages/: AnalysisEditor.tsx  Dashboard.css  Dashboard.tsx  ProjectManager.tsx  ResultsPage.tsx  Settings.tsx
frontend-web/src/services/: exportService.ts  heatmapService.ts  mapDataExtractor.ts  simulationEngine.ts
frontend/screens/: __init__.py  calculation_screen.py  calculation_screen_enhanced.py  heatmap_simulation_screen.py  result_screen.py  simulation_screen.py  workflow_screen.py
frontend/src/: App.tsx  functional-app.tsx  index.css  index.tsx  simple-professional-app.tsx
frontend/src/components/: DataPanel.ts  ResultsPanel.ts  StatusBar.ts  Toolbar.ts
frontend/src/contexts/: AuthContext.tsx  NotificationContext.tsx
frontend/src/services/: ApiService.ts  WebSocketService.ts  api.ts
map_layouts/: example_layout.json
qgis/doc/: LICENSE
qgis/i18n/: qgis_ar.qm  qgis_az.qm  qgis_bg.qm  qgis_bs.qm  qgis_ca.qm  qgis_cs.qm  qgis_da.qm  qgis_es.qm  qgis_et.qm  qgis_fi.qm  qgis_gl.qm  qgis_is.qm  qgis_ja.qm  qgis_ko.qm  qgis_lv.qm  qgis_pt_PT.qm  qgis_sc.qm  qgis_tr.qm  qgis_uk.qm  qgis_zh-Hans.qm  qgis_zh-Hant.qm
qgis/python/qgis/: _3d_p.pyi  (+3 more)
(+79 files in other folders)
